2010-04-29  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatConverter/GetFormat.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatConverter/ToFloatArray.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/Available.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/Close.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/GetFormat.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/GetFrameLength.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/MarkSupported.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/Read.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/ReadFloatArray.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/ReadFloatArrayIntInt.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/Reset.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/AudioFloatInputStream/Skip.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/DLSSoundbankReader/TestGetSoundbankFile.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/DLSSoundbankReader/TestGetSoundbankInputStream.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/DLSSoundbankReader/TestGetSoundbankInputStream2.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/DLSSoundbankReader/TestGetSoundbankUrl.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/EmergencySoundbank/TestCreateSoundbank.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/ModelByteBuffer/GetInputStream.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/ModelByteBuffer/GetRoot.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/ModelByteBuffer/Load.java,
	* overlays/openjdk/jdk/test/com/sun/media/sound/ModelByteBuffer/LoadAll.java,